# pharmacon

./: .gitignore  .readthedocs.yaml  CITATION.cff  LICENSE.txt  NOTICE  README.md  environment.yml  pyproject.toml
conda-recipe/: meta.yaml
docs/: requirements.txt
docs/source/: analyzer.rst  architecture.rst  conf.py  file_formats.rst  index.rst  installation.rst  logging.rst  pbc.rst  plot_configuration.rst  quickstart.rst
docs/source/commands/: dump.rst  export.rst  index.rst  merge.rst  plot.rst  structure.rst  trajectory.rst
examples/plot_ini/: README.md  all_plots.ini  hbonds_count_per_frame.ini  hbonds_heatmap.ini  hbonds_network.ini  hbonds_occupancy.ini  hbonds_timeline_pairs.ini  pca_fes_heatmap.ini  pca_probability_heatmap.ini  pca_scatter.ini  pca_timeseries.ini  pca_variance_ratio.ini  pl_interactions_all.ini  pli_heatmap_1.ini  pli_heatmap_2.ini  pli_ligand_monitor.ini  pli_pie_charts_1.ini  pli_stacked_column_1.ini  pli_stacked_column_2.ini  ppi_heatmap.ini  ppi_stacked_column.ini  ppi_timeline_pairs.ini  pta_unified.ini  rmsf.ini  rmsf_ligand.ini
src/pharmacon/: __init__.py  main.py
src/pharmacon/analyzer/: __init__.py  angles.py  average_structure.py  detector.py  distances.py  frame_logger.py  interactions.py  properties.py  sequence.py
src/pharmacon/command_line/: __init__.py  base.py  common_args.py  dispatcher.py  exceptions.py  formatter.py  registry.py
src/pharmacon/constants/: __init__.py  colors.py  environment.py  formats.py  smarts.py
src/pharmacon/fileio/: __init__.py  base.py  psa.py  pta.py
src/pharmacon/logger/: __init__.py  file.py  headers.py  levels.py  terminal.py
src/pharmacon/plotter/: __init__.py  hbonds.py  interactions.py  (+1 more)
tests/: conftest.py  test_angles.py  test_average_structure.py  test_detector.py  test_dispatcher.py  test_distances.py  test_fileio_base.py  test_fileio_psa.py  test_fileio_pta.py  test_fingerprint.py  test_frame_logger.py  test_hbonds_modes.py  test_hbonds_plots.py  test_identifiers.py  test_ini.py  test_interactions.py  test_logger.py  test_mda.py  test_pca_dispatch_and_validation.py  test_pli_cmap_interpolation.py  test_plot_ini.py  test_plot_ini_propagation.py  test_plot_settings_effects.py  test_plot_settings_unset.py  test_plot_validation.py  test_plotter_builders.py  test_plotter_smoke.py  test_plotter_utils.py  test_ppi_heatmap_matrix.py  test_ppi_validation.py  test_properties.py  test_pta_validation.py  test_registry.py  test_rmsf_fileio.py  test_rmsf_merge.py  test_rmsf_plot_settings.py  test_rmsf_shading_colors.py  test_rmsf_validation.py  test_sequence.py  test_settings_contract.py  (+4 more)
tests/helpers/: __init__.py  mock_pta.py
(+39 files in other folders)
