[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pharmacon"
version = "1.0.1"
description = "Pharmacon: A Molecular Dynamics Analysis Suite."
readme = "README.md"
requires-python = ">=3.12"

authors = [
  { name = "Kyriakos Georgiou" }
]

license = "GPL-3.0-only"
license-files = ["LICENSE.txt", "NOTICE"]

keywords = ["molecular-dynamics", "simulation", "analysis", "chemistry", "hdf5", "mdanalysis"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Typing :: Typed",
]

dependencies = [
    "MDAnalysis>=2.7",
    "configobj>=5.0",
    "h5py>=3.10",
    "matplotlib>=3.8",
    "networkx>=3.2",
    "numpy>=1.26",
    "periodictable>=1.7",
    "psutil>=5.9",
    "pyarrow>=14.0",
    "pyfiglet>=1.0",
    "pyjokes>=0.7",
    "rdkit>=2024.03.1",
    "rich>=13.0",
    "rich-argparse>=1.4",
    "scipy>=1.11",
    "typing_extensions>=4.0",
]

[project.urls]
Homepage = "https://github.com/k-georgiou/pharmacon"
Documentation = "https://pharmacon.readthedocs.io/"
Repository = "https://github.com/k-georgiou/pharmacon"
Issues = "https://github.com/k-georgiou/pharmacon/issues"

[project.optional-dependencies]
mpi = [
    "mpi4py>=3.1",
]
dev = [
    "pytest>=8.0",
    "MDAnalysisTests>=2.7",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=2.0",
]

[project.scripts]
pharmacon = "pharmacon.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pharmacon = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.pytest.ini_options]
filterwarnings = [
    # MDAnalysis/RDKit: known limitation when standardising certain molecular topologies
    "ignore:The standardization could not be completed.*:UserWarning",
    # MDAnalysis: expected when tests intentionally create empty (0-atom) universes
    "ignore:Can not guess attributes for universe with 0 atoms:UserWarning",
]
markers = [
    "slow: tests that render plots via matplotlib (skip with `pytest -m 'not slow'`)",
]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
